crates/toml_edit/tests/snapshots/invalid/ext/float/overflow.stderr
TOML parse error at line 1, column 5
  |
1 | a = 9e99999
  |     ^
invalid floating-point number
